@@ -1,3 +1,15 @@
+2004-06-10  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-prefs.c:
+	Use the new file selector.
+
+2004-06-10  Ross Burton  <ross@burtonini.com>
+
+	* configure.in:
+	* src/Makefile.am:
+	* tests/Makefile.am:
+	Depend on GTK+ 2.4, and re-arrange some variables.
+
 2004-06-07  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
